--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.2",
+    "elliptic": "^6.5.4",
     "express": "^4.17.3",
     "hex-to-binary": "^1.0.1",
     "redis": "^4.0.4",
