--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.3",
     "hex-to-binary": "^1.0.1",
     "redis": "^4.0.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.2"
   }
 }
