--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "start": "node index.js",
-    "dev": "npm run start-redis && nodemon index.js",
+    "start": "npm run build-client && node index.js",
+    "dev": "npm run dev-client & npm run start-redis && nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
-    "start-redis": "redis-server --daemonize yes"
+    "start-redis": "redis-server --daemonize yes",
+    "build-client": "npm run clean && parcel build src/client/index.html --out-dir src/client/dist",
+    "dev-client": "npm run clean && parcel src/client/index.html --out-dir src/client/dist",
+    "clean": "rm -rf .cache src/client/dist"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +26,14 @@
     "elliptic": "^6.5.4",
     "express": "^4.17.3",
     "hex-to-binary": "^1.0.1",
+    "history": "^5.3.0",
+    "parcel-bundler": "^1.12.5",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "redis": "^4.0.4",
+    "regenerator-runtime": "^0.13.9",
     "request": "^2.88.2",
     "uuid": "^8.3.2"
   }
